# rsqsim-python-tools

./: .buildinfo  .gitattributes  .gitignore  LICENSE  README.md  environment.yml  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
src/rsqsim_api/: animation_whole_nz.py  pyproject.toml  setup.py
src/rsqsim_api/rsqsim_api/: __init__.py
src/rsqsim_api/rsqsim_api.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/rsqsim_api/rsqsim_api/catalogue/: __init__.py  catalogue.py  event.py  nshm_utilities.py  utilities.py
src/rsqsim_api/rsqsim_api/catalogue/test/: test_catalogue.py
src/rsqsim_api/rsqsim_api/catalogue/test/data/: trimmed_catalogue.csv  trimmed_events.npy  trimmed_slip.npy  (+2 more)
src/rsqsim_api/rsqsim_api/containers/: catalogue.py  fault.py  tsunami.py  utilities.py
src/rsqsim_api/rsqsim_api/containers/test/: test_catalogue.py  test_fault.py
src/rsqsim_api/rsqsim_api/examples/: ipyvol_bruce_faults.ipynb  ipyvol_test.ipynb
src/rsqsim_api/rsqsim_api/fault/: __init__.py  fault.py  multifault.py  patch.py  segment.py  slip.py  splines.py  utilities.py
src/rsqsim_api/rsqsim_api/fault/test/: test_fault.py
src/rsqsim_api/rsqsim_api/io/: __init__.py  array_operations.py  bruce_shaw_utilities.py  compressed_pickle.py  mesh_utils.py  multiprocessing_utils.py  read_utils.py  rsqsim_constants.py  tsurf.py  write_utils.py
src/rsqsim_api/rsqsim_api/tsunami/: __init__.py  gf_netcdf.py  tsunami.py  tsunami_multiprocessing.py
src/rsqsim_api/rsqsim_api/visualisation/: __init__.py  animation.py  utilities.py  visualisation_3d.py
(+319 files in other folders)
