[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rsqsim_api"
version = "0.0.1"
description = "Read and write RSQSim earthquake simulation inputs and outputs"
authors = [
    {name = "Andy Howell", email = "a.howell@gns.cri.nz"},
    {name = "Camilla Penney"},
]

[tool.setuptools.packages.find]
# The pyproject.toml lives in src/rsqsim_api/; the Python package
# rsqsim_api/ is a direct subdirectory, so search the current directory.
where = ["."]
